--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
     "morgan": "^1.10.1",
-    "openai": "^6.9.0"
+    "multer": "^2.0.2",
+    "openai": "^6.9.0",
+    "ws": "^8.18.3"
   }
 }
