--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^6.9.0",
+    "pdf-parse": "^2.4.5",
     "ws": "^8.18.3"
   }
 }
