--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
@@ -23,7 +24,7 @@
     "multer": "^2.0.2",
     "openai": "^6.9.0",
     "pdf-parse": "^2.4.5",
-    "ws": "^8.18.3",
-    "werift": "^0.19.3"
+    "werift": "^0.19.3",
+    "ws": "^8.18.3"
   }
 }
