--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,20 @@ PORT=5000
 
 # Node Environment
 NODE_ENV=development
+
+# Hugging Face API (for sentiment analysis)
+HUGGINGFACE_TOKEN=
+
+# Interview modes (default)
+DEFAULT_INTERVIEW_MODE=technical
+
+# Sentiment analysis (enable/disable)
+ENABLE_SENTIMENT_ANALYSIS=true
+
+# Leaderboard settings
+LEADERBOARD_UPDATE_ON_SESSION_END=true
+ENABLE_BADGES=true
+
+# TTS Service for future text-to-speech
+TTS_ENABLED=false
+TTS_API_KEY=optional
