--- a/backend/.env
+++ b/backend/.env
@@ -14,7 +14,7 @@ PORT=5000
 NODE_ENV=development
 
 # Hugging Face API (for sentiment analysis)
-HUGGINGFACE_TOKEN=
+HUGGINGFACE_TOKEN=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
 
 # Interview modes (default)
 DEFAULT_INTERVIEW_MODE=technical
